# DECTNRPLUS

HS_DECT_2020/: .getignore  CMakeLists.txt  Kconfig  README.rst  prj.conf
HS_DECT_2020/src/: CMakeLists.txt  main.c
HS_DECT_2020/src/hs_core/: CMakeLists.txt  core.c  core.h
HS_DECT_2020/src/hs_hello/: CMakeLists.txt  hello.c  hello.h
HS_DECT_2020/src/hs_perf/: CMakeLists.txt  perf.c  perf.h  perf_shell.c  perf_shell.h
HS_DECT_2020/src/hs_ping/: CMakeLists.txt  fping.c  fping.h  ping.c  ping.h
HS_DECT_2020/src/hs_scheduller/: CMakeLists.txt  scheduller.c
HS_DECT_2020/src/hs_shell/: CMakeLists.txt  hs_shell.c  hs_shell.h
HS_DECT_SHELL/: README.rst  hs_dect_doc.rst  hs_dect_group.rst  prj.conf
HS_DECT_SHELL/build_1/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  dect_shell_sysbuild_cache.txt  domains.yaml  generated_nrfutil_batch.json  pm.config
HS_DECT_SHELL/build_1/Kconfig/boards/: Kconfig
HS_DECT_SHELL/build_1/_sysbuild/: cmake_install.cmake
HS_DECT_SHELL/build_1/dect_shell/: .ninja_deps  .ninja_log  CMakeCache.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json
HS_DECT_SHELL/build_1/dect_shell/tfm/: .ninja_deps  .ninja_log  (+5 more)
HS_DECT_SHELL/src/dect/: dect_phy_shell.c
UMLS/: Multiptwithoutlagend.puml  Multupt_secon.puml  beacon_scan.puml  beacon_stop.puml  dec_shell.drawio  dect mac beacon_start.puml  dect_shell.puml  dect_shell_int.puml  diagram_scenario_association  mac_message.puml  multi_pt_comdigram.puml  multipt  multipt.puml  status.puml
(+156 files in other folders)
